# ValhallaEval-Platform

./: .editorconfig  .env.prod.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  dev.sh  docker-compose.prod.yml  docker-compose.yml  start.sh  stop.sh
.cursor/rules/: project-skill-system.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  Cargo.toml
backend/migrations/: 20240101000001_initial.up.sql  20240101000002_add_concurrency.up.sql  20240101000003_add_baseline_prompt.up.sql  20240101000004_add_task_stage_models.up.sql
backend/src/: error.rs  main.rs
backend/src/llm/: client.rs
backend/src/models/: assessment.rs  eval_run.rs  mod.rs  model_config.rs  prompt.rs  task.rs  test_data.rs  validation.rs
backend/src/routes/: datasets.rs  mod.rs  models.rs  prompts.rs  tasks.rs
docker/: nginx.conf
docs/: api-reference.md  architecture.md  deployment.md  development.md
docs/ai/: README.md
docs/requirements/: ValhallaEval-需求文档.md  大模型 Prompt 与模型评测系统需求文档.md
docs/user-guide/: 01-getting-started.md  02-model-management.md  03-prompt-management.md  04-dataset-management.md  05-create-task.md  06-run-and-validate.md  07-analyze-results.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
testdata/chinese-reading-comprehension-prompt-comparison/: README.md  batch-import-answer-key.md  batch-import.txt  dataset.json  prompts.json  (+2 more)
(+41 files in other folders)
